# FFmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lsp/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_lsp_ffmpegdemo_util_AudioUtils.h  com_lsp_ffmpegdemo_util_MediaUtils.h  com_lsp_ffmpegdemo_util_VideoUtils.h  ffmpeg-audio.c  ffmpeg-media.c  ffmpeg-video.c
app/src/main/java/com/lsp/ffmpegdemo/: AudioActivity.java  DecodeVideoActivity.java  MainActivity.java  MyApp.java  VideoPlayerActivity.java
app/src/main/java/com/lsp/ffmpegdemo/util/: AudioUtils.java  MediaUtils.java  VideoUtils.java
app/src/main/java/com/lsp/ffmpegdemo/widget/: FFmpegSurfaceView.java
app/src/main/res/layout/: activity_audio.xml  activity_main.xml  activity_video_decode.xml  activity_video_player.xml
app/src/test/java/com/lsp/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
